Fixed some formatting

--- a/sub-cites/poke-teams.html
+++ b/sub-cites/poke-teams.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="top-strip">
-		<a href="gaming.html" class="back-button"> Back </a>
+		<a href="pokemon.html" class="back-button"> Back </a>
 	</div>
 	<div class="container">
 		<div class="white-outline centering third-width">	
@@ -150,31 +150,31 @@
 				<br>
 				<span class="almost-black-text gray-button"> Staraptor </span>
 			</div>
-			
+			<br>
 			<div>
 				<img src="http://www.smogon.com/dex/media/sprites/xy/spiritomb.gif">
 				<br>
 				<span class="purple-text gray-button"> Spiritomb </span>
 			</div>
-			
+			<br>
 			<div>
 				<img src="http://www.smogon.com/dex/media/sprites/xy/drapion.gif">
 				<br>
 				<span class="lavender-text gray-button"> Drapion </span>
 			</div>
-			
+			<br>
 			<div>
 				<img src="http://www.smogon.com/dex/media/sprites/xy/bronzong.gif">
 				<br>
 				<span class="turquoise-text gray-button"> Bronzong </span>
 			</div>
-			
+			<br>
 			<div>
 				<img src="http://www.smogon.com/dex/media/sprites/xy/infernape.gif">
 				<br>
 				<span class="red-text gray-button"> Infernape </span>
 			</div>
-			
+			<br>
 			<div>
 				<img src="http://www.smogon.com/dex/media/sprites/xy/dialga.gif">
 				<br>
@@ -184,10 +184,85 @@
 		
 		<div class="white-outline centering third-width">
 			<h2 class="white-text"> Pok&eacute;mon Black and White </h2>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/eelektross.gif">
+				<br>
+				<span class="navy-text gray-button"> Eelektross </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/zoroark.gif">
+				<br>
+				<span class="almost-black-text gray-button"> Zoroark </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/unfezant.gif">
+				<br>
+				<span class="light-gray-text gray-button"> Unfezant </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/scrafty.gif">
+				<br>
+				<span class="yellow-text gray-button"> Scrafty </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/vanilluxe.gif">
+				<br>
+				<span class="white-text gray-button"> Vanilluxe </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/druddigon.gif">
+				<br>
+				<span class="light-blue-text gray-button"> Druddigon </span>
+			</div>
+			
 		</div>
 		
 		<div class="white-outline centering third-width">
 			<h2 class="white-text"> Pok&eacute;mon X and Y </h2>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/talonflame.gif">
+				<br>
+				<span class="red-text gray-button"> Talonflame </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/blastoise.gif">
+				<br>
+				<span class="light-blue-text gray-button"> Blastoise </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/tyrantrum.gif">
+				<br>
+				<span class="maroon-text gray-button"> Tyrantrum </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/avalugg.gif">
+				<br>
+				<span class="white-text gray-button"> Avalugg </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/chesnaught.gif">
+				<br>
+				<span class="tan-text gray-button"> Chesnaught </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/banette.gif">
+				<br>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/banette-mega.gif">
+				<br>
+				<span class="purple-text gray-button"> Banette
+				<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png">
+				</span>
+			</div>
 		</div>
 	</div>
 </body>
