--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -116,7 +116,7 @@
 		
 		<div class="white-outline centering right-side-poke">
 			
-			<a href="poke-teams.html" class="top-left-white gray-text"> More Teams </a>
+			<a href="poke-teams.html" class="top-left-white light-gray-text"> View More Teams </a>
 			<h2 class="white-text"> The Main Team </h2>
 			<div>
 				<img src="http://www.smogon.com/dex/media/sprites/xy/galvantula.gif">
