Updated Pokemon page

--- a/sub-cites/poke-teams.html
+++ b/sub-cites/poke-teams.html
@@ -9,6 +9,7 @@
 	<div class="top-strip">
 		<a href="pokemon.html" class="back-button"> Back </a>
 	</div>
+	<h2 class="black-bg"> Most Used </h2>
 	<div class="container">
 		<div class="white-outline centering third-width">	
 			<h2 class="white-text"> The Main Team </h2>
@@ -38,7 +39,8 @@
 			<div>
 				<img src="http://www.smogon.com/dex/media/sprites/xy/sylveon.gif">
 				<br>
-				<span class="light-pink-text gray-button"> Sylveon </span>
+				<span class="light-pink-text gray-button"> "Pride" <br>
+				Sylveon </span>
 			</div>
 			<br>
 			<div>
@@ -97,7 +99,7 @@
 		</div>
 		
 		<div class="white-outline centering third-width">	
-			<h2 class="white-text"> Recent Team - Pok&eacute;mon Sun </h2>
+			<h2 class="white-text"> Recent Team - Pok&eacute;mon Sun and Ultra Sun </h2>
 			<div>
 				<img src="http://www.smogon.com/dex/media/sprites/xy/toucannon.gif">
 				<br>
@@ -108,8 +110,6 @@
 				<img src="http://www.smogon.com/dex/media/sprites/xy/lycanroc.gif">
 				<br>
 				<img src="http://www.smogon.com/dex/media/sprites/xy/lycanroc-dusk.gif">
-				<br>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/lycanroc-midnight.gif">
 				<br>
 				<span class="tan-text gray-button"> Lycanroc </span>
 			</div>
@@ -137,14 +137,188 @@
 			<div>
 				<img src="http://www.smogon.com/dex/media/sprites/xy/incineroar.gif">
 				<br>
-				<span class="red-text gray-button"> Incineroar </span>
+				<span class="red-text gray-button"> Incineroar 
+				<img width="25px" src="pokemon/firium-z.png"> </span>
 			</div>
 		</div>
 	</div>
-	<br>
-	<div class="container"> 		
+	<a name="game-playthroughs">
+	<h2 class="black-bg"> Game Playthroughs </h2>
+	<div class="container"> 
 		<div class="white-outline centering third-width">
-			<h2 class="white-text"> Pok&eacute;mon Diamond, Pearl, Platinum </h2>
+			<h2 class="white-text"> Pok&eacute;mon Omega Ruby </h2>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/skarmory.gif">
+				<br>
+				<span class="light-gray-text gray-button"> Skarmory </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/linoone.gif">
+				<br>
+				<span class="tan-text gray-button"> Linoone </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/cacturne.gif">
+				<br>
+				<span class="green-text gray-button"> Cacturne </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/torkoal.gif">
+				<br>
+				<span class="pale-orange-text gray-button"> Torkoal </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/swampert.gif">
+				<br>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/swampert-mega.gif">
+				<br>
+				<span class="light-blue-text gray-button"> Swampert
+				<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png">
+				</span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/groudon.gif">
+				<br>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/groudon-primal.gif">
+				<br>
+				<span class="red-text gray-button"> Groudon
+				<img width="15px" src="pokemon/red-orb.jpg">
+				</span>
+			</div>
+		</div>
+			
+		<div class="white-outline centering third-width">
+			<h2 class="white-text"> Pok&eacute;mon Y </h2>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/talonflame.gif">
+				<br>
+				<span class="red-orange-text gray-button"> Talonflame </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/tyrantrum.gif">
+				<br>
+				<span class="maroon-text gray-button"> Tyrantrum </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/avalugg.gif">
+				<br>
+				<span class="ice-blue-text gray-button"> Avalugg </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/chesnaught.gif">
+				<br>
+				<span class="tan-text gray-button"> Chesnaught </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/blastoise.gif">
+				<br>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/blastoise-mega.gif">
+				<br>
+				<span class="light-blue-text gray-button"> Blastoise
+				<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png">
+				</span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/banette.gif">
+				<br>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/banette-mega.gif">
+				<br>
+				<span class="purple-text gray-button"> Banette
+				<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png">
+				</span>
+			</div>
+		</div>	
+		
+		<div class="white-outline centering third-width">
+			<h2 class="white-text"> Pok&eacute;mon White and White 2 </h2>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/eelektross.gif">
+				<br>
+				<span class="navy-text gray-button"> Eelektross </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/zoroark.gif">
+				<br>
+				<span class="almost-black-text gray-button"> Zoroark </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/unfezant.gif">
+				<br>
+				<span class="light-gray-text gray-button"> Unfezant </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/scrafty.gif">
+				<br>
+				<span class="yellow-text gray-button"> Scrafty </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/vanilluxe.gif">
+				<br>
+				<span class="ice-blue-text gray-button"> Vanilluxe </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/druddigon.gif">
+				<br>
+				<span class="light-blue-text gray-button"> Druddigon </span>
+			</div>
+		</div>
+		<div class="white-outline centering third-width">
+			<h2 class="white-text"> Pok&eacute;mon Heart Gold </h2>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/togekiss.gif">
+				<br>
+				<span class="white-text gray-button"> Togekiss </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/typhlosion.gif">
+				<br>
+				<span class="navy-text gray-button"> Typhlosion </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/tentacruel.gif">
+				<br>
+				<span class="light-blue-text gray-button"> Tentacruel </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/exeggutor.gif">
+				<br>
+				<span class="green-text gray-button"> Exeggutor </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/mamoswine.gif">
+				<br>
+				<span class="brown-text gray-button"> Mamoswine </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/hitmonlee.gif">
+				<br>
+				<span class="tan-text gray-button"> Hitmonlee </span>
+			</div>
+			
+		</div>
+		
+		<div class="white-outline centering third-width">
+			<h2 class="white-text"> Pok&eacute;mon Diamond and Platinum </h2>
 			<div>
 				<img src="http://www.smogon.com/dex/media/sprites/xy/staraptor.gif">
 				<br>
@@ -183,86 +357,7 @@
 		</div>
 		
 		<div class="white-outline centering third-width">
-			<h2 class="white-text"> Pok&eacute;mon Black and White </h2>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/eelektross.gif">
-				<br>
-				<span class="navy-text gray-button"> Eelektross </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/zoroark.gif">
-				<br>
-				<span class="almost-black-text gray-button"> Zoroark </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/unfezant.gif">
-				<br>
-				<span class="light-gray-text gray-button"> Unfezant </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/scrafty.gif">
-				<br>
-				<span class="yellow-text gray-button"> Scrafty </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/vanilluxe.gif">
-				<br>
-				<span class="white-text gray-button"> Vanilluxe </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/druddigon.gif">
-				<br>
-				<span class="light-blue-text gray-button"> Druddigon </span>
-			</div>
-			
-		</div>
-		
-		<div class="white-outline centering third-width">
-			<h2 class="white-text"> Pok&eacute;mon X and Y </h2>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/talonflame.gif">
-				<br>
-				<span class="red-text gray-button"> Talonflame </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/blastoise.gif">
-				<br>
-				<span class="light-blue-text gray-button"> Blastoise </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/tyrantrum.gif">
-				<br>
-				<span class="maroon-text gray-button"> Tyrantrum </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/avalugg.gif">
-				<br>
-				<span class="white-text gray-button"> Avalugg </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/chesnaught.gif">
-				<br>
-				<span class="tan-text gray-button"> Chesnaught </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/banette.gif">
-				<br>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/banette-mega.gif">
-				<br>
-				<span class="purple-text gray-button"> Banette
-				<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png">
-				</span>
-			</div>
+
 		</div>
 	</div>
 </body>
