--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -29,6 +29,7 @@
 				<img width = "600px" src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fblogs-images.forbes.com%2Fdavidthier%2Ffiles%2F2018%2F05%2FDeaLp6fVMAEzguS.jpg">
 			</div>
 				
+			<a name="gen-compare">	
 			<h2> Comparing Each Generation </h2>
 			<div class="cul">
 			<table align="center">
@@ -43,15 +44,15 @@
 					<th> Generation 1 </th>
 					<td> <img class="poke-game-cover" src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a6/Pok%C3%A9mon_box_art_-_Red_Version.png/220px-Pok%C3%A9mon_box_art_-_Red_Version.png"> 
 						<img class="poke-game-cover" src="https://romsmania.com/statics/assets/covers/gameboy/pokemon%20green%20game%20cover.jpg"> </td>
-					<td>Most original<br><br>Most nostalgic gameplay</td>
-					<td>Least detailed designs<br><br>Psychic types overpowered</td>
+					<td>The original<br><br>Most nostalgic gameplay</td>
+					<td>Least interesting designs<br><br>Psychic types overpowered</td>
 				</tr>
 				<tr>
 					<th> Generation 2</th>
 						<td> <img class="poke-game-cover" src="https://upload.wikimedia.org/wikipedia/en/thumb/4/4c/Pok%C3%A9mon_box_art_-_Gold_Version.png/220px-Pok%C3%A9mon_box_art_-_Gold_Version.png">
 							<img class="poke-game-cover" src="https://cdn.bulbagarden.net/upload/thumb/f/f5/Silver_EN_boxart.png/250px-Silver_EN_boxart.png"> </td> 
 						<td>Largest map (HG/SS)</td>
-						<td>Boring starter Pok&eacute;mon</td>
+						<td>One-type starter Pok&eacute;mon<br><br>Reused villains and plot</td>
 				</tr>
 				<tr>
 					<th> Generation 3</th>
@@ -65,21 +66,21 @@
 					<td> <img class="poke-game-cover" src="https://upload.wikimedia.org/wikipedia/en/thumb/3/3d/PokemonDiamondBox.jpg/220px-PokemonDiamondBox.jpg"> 
 						<img class="poke-game-cover" src="https://cf2.s3.souqcdn.com/item/2014/06/28/70/58/83/5/item_XL_7058835_5002134.jpg"> </td>
 						<td>Great starting Pok&eacute;mon<br><br>Very nostalgic music<br><br>The underground</td>
-						<td>Fewest new Pok&eacute;mon<br><br>HMs required often</td>
+						<td>Fewest new Pok&eacute;mon<br></td>
 				</tr>
 				<tr>
 					<th> Generation 5</th>
 					<td> <img class="poke-game-cover" src="https://romsmania.com/statics/assets/covers/nintendo-ds/Pokemon%20-%20White%20Version%20(USA,%20Europe)%20(NDSi%20Enhanced)%20[b].jpg"> 
 						<img class="poke-game-cover" src="https://romsmania.com/statics/assets/covers/nintendo-ds/Pokemon%20-%20Black%20Version%20(USA,%20Europe)%20(NDSi%20Enhanced)%20[b].jpg"></td>
-					<td>Very engaging storyline<br><br>Most new Pok&eacute;mon</td>
-					<td>A handful of poor Pok&eacute;mon designs</td>
+					<td>Incredibly engaging storyline<br><br>Most new Pok&eacute;mon<br><br>Epic Gym Leader Battles<br><br>Reusable TMs introduced</td>
+					<td>Handful of poor Pok&eacute;mon designs</td>
 				</tr>
 				<tr>
 					<th> Generation 6</th>
 					<td> <img class="poke-game-cover" src="https://m.media-amazon.com/images/S/aplus-media/sota/84709119-8965-442e-afac-3e753c99eb3a.jpg"> 
 						<img class="poke-game-cover" src="https://target.scene7.com/is/image/Target/14456460?wid=488&hei=488&fmt=pjpeg"> </td>
 						<td>Best Pok&eacute;mon Designs<br><br>Best online multiplayer experience<br><br>Great music</td>
-						<td>Villainous team was predictable<br><br>Trio game was cancelled</td>
+						<td>Villainous team was predictable<br><br>Trio game (Pok&eacute;mon Z) was cancelled</td>
 				</tr>
 				<tr>
 					<th> Generation 7</th>
@@ -101,7 +102,7 @@
 			</div>
 			<p class="poke-rant">
 				Generation 5 is undeniably the best generation. People mock the designs of the Pok&eacute;mon from that generation, but no matter what is said,
-				the designs will always be better than generation 1. Generation 5 took energy out of making every single design look <i> super cool </i>
+				the designs will always be better than generation 1. Generation 5 took a sliver of energy out of making every single design look <i> super cool </i>
 				and put it into creating the most original Pok&eacute;mon out of any generation ever. That's right, Generation 5 by itself included more original Pok&eacute;mon
 				then the treasured "OG" first region. Not to mention that generation 5 also included continuous animations during battle which hadn't been done before, 
 				creation of the Battle Spot for online battles, and of course, the best in-game story of any Pok&eacute;mon game so far. The titles Black and White are made out to be ironic,
@@ -170,8 +171,6 @@
 				<img src="http://www.smogon.com/dex/media/sprites/xy/lycanroc.gif">
 				<br>
 				<img src="http://www.smogon.com/dex/media/sprites/xy/lycanroc-dusk.gif">
-				<br>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/lycanroc-midnight.gif">
 				<br>
 				<span class="tan-text gray-button"> Lycanroc </span>
 			</div>
