--- a/index.html
+++ b/index.html
@@ -59,15 +59,16 @@
 	</script>
 </head>
 <body>
-	<div class="top-strip">	</div>
-	<h1> Brandon C. Ruoff </h1>
-
-	<div class="centering">
+	<div class="top-strip centering">	
 		<a href="sub-cites/computer-science.html" class="gray-button" > Computer Science </a>
 		<a href="sub-cites/gaming.html" class="gray-button">  Gaming </a>
 		<a href="sub-cites/piano.html" class="gray-button"> Piano </a>
 		<a href="sub-cites/art.html" class="gray-button"> Art </a> 
 		<a href="sub-cites/running.html" class="gray-button"> Running </a> 
+	</div>
+	<h1> Brandon C. Ruoff </h1>
+
+	<div class="centering">
 		<div> 
 			<img class="profile-pic" alt="Profile Picture" src="pictures/FacebookProfilePicMarch2018.jpg">
 		</div>
