Fixed formatting - third time's a charm

--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -14,7 +14,7 @@
 		<img class="heading" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/International_Pok%C3%A9mon_logo.svg/2000px-International_Pok%C3%A9mon_logo.svg.png" alt="Pokemon Logo">
 	</div>
 	<br>
-	<div class="container">
+	<div class="container-no-wrap">
 		<div class="centering white-outline left-side-poke">
 			<h2> Great Sites for Pok&eacute;mon info </h1>
 				<a href="https://serebii.net/" class="gray-button"> https://serebii.net/ </a>
