Added Pokemon Search page (currently incomplete)

--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -26,7 +26,10 @@
 			<h2> Recent News </h2>
 			<div>
 				<h3> Pok&eacute;mon Coming to Switch!</h3>
-				<img width = "600px" src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fblogs-images.forbes.com%2Fdavidthier%2Ffiles%2F2018%2F05%2FDeaLp6fVMAEzguS.jpg">
+				<img width = "600px" src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fblogs-images.forbes.com%2Fdavidthier%2Ffiles%2F2018%2F05%2FDeaLp6fVMAEzguS.jpg" alt="Let's Go">
+				<h3> New Pok&eacute;mon Introduced: Meltan and Melmetal </h3>
+				<img height="200px" src="https://img.pokemondb.net/artwork/meltan.jpg" alt="Meltan">
+				<img height="200px" src="https://img.pokemondb.net/artwork/melmetal.jpg" alt="Melmetal">
 			</div>
 				
 			<a name="gen-compare">	
@@ -51,7 +54,7 @@
 					<th> Generation 2</th>
 						<td> <img class="poke-game-cover" src="https://upload.wikimedia.org/wikipedia/en/thumb/4/4c/Pok%C3%A9mon_box_art_-_Gold_Version.png/220px-Pok%C3%A9mon_box_art_-_Gold_Version.png">
 							<img class="poke-game-cover" src="https://cdn.bulbagarden.net/upload/thumb/f/f5/Silver_EN_boxart.png/250px-Silver_EN_boxart.png"> </td> 
-						<td>Largest map (HG/SS)</td>
+						<td>Largest map (HG/SS)<br><br>Aggressive Rival</td>
 						<td>One-type starter Pok&eacute;mon<br><br>Reused villains and plot</td>
 				</tr>
 				<tr>
@@ -66,7 +69,7 @@
 					<td> <img class="poke-game-cover" src="https://upload.wikimedia.org/wikipedia/en/thumb/3/3d/PokemonDiamondBox.jpg/220px-PokemonDiamondBox.jpg"> 
 						<img class="poke-game-cover" src="https://cf2.s3.souqcdn.com/item/2014/06/28/70/58/83/5/item_XL_7058835_5002134.jpg"> </td>
 						<td>Great starting Pok&eacute;mon<br><br>Very nostalgic music<br><br>The underground</td>
-						<td>Fewest new Pok&eacute;mon<br></td>
+						<td>HMs required too often<br></td>
 				</tr>
 				<tr>
 					<th> Generation 5</th>
@@ -80,7 +83,7 @@
 					<td> <img class="poke-game-cover" src="https://m.media-amazon.com/images/S/aplus-media/sota/84709119-8965-442e-afac-3e753c99eb3a.jpg"> 
 						<img class="poke-game-cover" src="https://target.scene7.com/is/image/Target/14456460?wid=488&hei=488&fmt=pjpeg"> </td>
 						<td>Best Pok&eacute;mon Designs<br><br>Best online multiplayer experience<br><br>Great music</td>
-						<td>Villainous team was predictable<br><br>Trio game (Pok&eacute;mon Z) was cancelled</td>
+						<td>Villainous team was predictable<br><br>Trio game (Pok&eacute;mon Z) was cancelled<br><br>Fewest new Pok&eacute;mon</td>
 				</tr>
 				<tr>
 					<th> Generation 7</th>
@@ -117,7 +120,10 @@
 		
 		<div class="white-outline centering right-side-poke">
 			
-			<a href="poke-teams.html" class="top-left-white light-gray-text"> View More Teams </a>
+			<a href="poke-search.html" class="white-menu light-gray-text"> Pok&eacute;mon Finder </a>
+			<br>
+			<a href="poke-teams.html" class="white-menu light-gray-text"> View More Teams </a>
+			<br>
 			<h2 class="white-text"> The Main Team </h2>
 			<div>
 				<img src="http://www.smogon.com/dex/media/sprites/xy/galvantula.gif">
