Added Poke Teambuilder page and removed some things

--- a/sub-cites/art.html
+++ b/sub-cites/art.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
 <body>
-	<div class="top-strip">
-		<a href="../index.html" class="back-button"> Back </a>
+	<div class="top-strip left-align">
+		<a href="../index.html" class="gray-button"> Back </a>
 	</div>
 	<h1> Art </h1>
 	<div class="centering">
