--- a/sub-cites/computer-science.html
+++ b/sub-cites/computer-science.html
@@ -5,45 +5,22 @@
 	<link rel="stylesheet" href="../styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
-<body class="centering">
-	<div class="top-strip">
-		<a href="../index.html" class="back-button"> Back </a>
+<body>
+	<div class="top-strip left-align">
+		<a href="../index.html" class="gray-button"> Back </a>
 	</div>
-	<h1> Computer Science </h2>
-	<br>
-	<h3> <a href="https://github.com/brandonruoff8" class="gray-button">  GitHub </a> </h3>
-	<p"> View my Github account where I can share my programs with the world! </p>
-	
-	<h3> <a href="computer-science/practice-problems.html" class="gray-button">  Practice Problems </a> </h3>
-	<p> 
-		Some practice problems to test my programming abilities.
-	</p>
-	
-	<h2 class="white-text">
-		Projects:
-	</h2>
-	
-	<h3> <a href="cs315index.html" class="gray-button"> CS 315 Internet Programming </a> </h3>
-
-	<h3> <a href="" class="gray-button"> Pok&eacute;mon Battle </a> </h3>
-	<p class="red-text">
-		The game is still incomplete.
-	</p>
-	<p>
-		I know a lot about Pokemon, so I am attempting to build a simple battle simulator. It includes a variety of Pokemon to
-		choose from to create a full party of 6 Pokemon. The player faces off against an AI that represents me. Currently only
-		damage is implemented--status moves, special effects of moves, and abilities will come later.
-	</p>
-	<h3> <a href="computer-science/mini_calculator.jar" download class="gray-button"> Mini Calculator </a> </h3>
-	<p>
-		I built a simple Calculator program build from JFrame for one of my classes. It can take two numbers as input at a time in the following
-		format: 
-		</br></br>
-		[integer1][function][integer2]
-		</br>
-		(for example: 22+8)
-		</br></br>
-		It cannot use decimals as an input, but the division function will in fact supply a decimal answer.
-	</p>
+	<div class="centering">
+		<h1> Computer Science </h2>
+		<br>
+		<h3> <a href="https://github.com/brandonruoff8" class="gray-button">  GitHub </a> </h3>
+		<p> View my Github account </p>
+		
+		<h3> <a href="computer-science/practice-problems.html" class="gray-button">  Practice Problems </a> </h3>
+		<p> 
+			Some practice problems to test my programming abilities.
+		</p>
+		
+		<h3> <a href="computer-science/cs315index.html" class="gray-button"> CS 315 Internet Programming </a> </h3>
+	</div>
 </body>
 </html>
