--- a/sub-cites/computer-science/cs315index.html
+++ b/sub-cites/computer-science/cs315index.html
@@ -3,15 +3,17 @@
 <head> 
   <title>CS 315 Assignments</title>
   <meta charset="utf-8"/>
-  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="../../styles.css">
 </head>
 <body>
-	<div class="top-strip">
-		<a href="computer-science.html" class="back-button"> Back </a>
+	<div class="top-strip left-align">
+		<a href="../computer-science.html" class="gray-button"> Back </a>
 	</div>
 	<h1> CS 315 Internet Programming <h1>
 	<h3> <a href="http://ice.truman.edu/~bcr7812/project/index315.html" class="gray-button"> Project </a> </h3>
 	<h3> <a href="http://ice.truman.edu/~bcr7812/assignment_1/index.html" class="gray-button"> Assignment 1 </a> </h3>
 	<h3> <a href="http://ice.truman.edu/~bcr7812/assignment_2/hw2start.html" class="gray-button"> Assignment 2 </a> </h3>
+	<h3> <a href="http://ice.truman.edu/~bcr7812/assignment_3/quiz.php" class="gray-button"> Assignment 3 </a> </h3>
+	<h3> <a href="http://ice.truman.edu/~bcr7812/assignment_4/dates.html" class="gray-button"> Assignment 4 </a> </h3>
 </body>
 </html>
