--- a/sub-cites/gaming.html
+++ b/sub-cites/gaming.html
@@ -5,8 +5,8 @@
 	<link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-	<div class="top-strip">
-		<a href="../index.html" class="back-button"> Back </a>
+	<div class="top-strip align-left">	
+		<a href="../index.html" class="gray-button"> Back </a>
 	</div>
 	<div class="dead-middle">
 		<h1> Gaming </h1>
