--- a/sub-cites/piano.html
+++ b/sub-cites/piano.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
 <body>
-	<div class="top-strip">
-		<a href="../index.html" class="back-button"> Back </a>
+	<div class="top-strip left-align">
+		<a href="../index.html" class="gray-button"> Back </a>
 	</div>
 	<h1> Piano </h1>
 	<div class="center-whole">
@@ -63,7 +63,7 @@
 	<div class="center-whole">
 		<h2 class="white-text"> Sheet Music I Made Based on Existing Songs </h2>
 		<ul class="cul">
-		<li> <a href="piano/Ark_Death_Theme.pdf"> Ark Death Theme </a> </li>
+		<li> <a href="piano/Ark_Death_Theme.pdf" class="gray-button"> Ark Death Theme </a> </li>
 		</ul>
 	</div>
 	<div>
