--- a/sub-cites/poke-search.html
+++ b/sub-cites/poke-search.html
@@ -7,8 +7,8 @@
 	<!-- meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no" -->
 </head>
 <body>
-	<div class="top-strip">
-		<a href="pokemon.html" class="back-button"> Back </a>
+	<div class="top-strip left-align">
+		<a href="pokemon.html" class="gray-button"> Back </a>
 	</div>
 </body>
 </html>
