--- a/sub-cites/poke-teams.html
+++ b/sub-cites/poke-teams.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" href="styles-poke.css">
 </head>
 <body>
-	<div class="top-strip">
-		<a href="pokemon.html" class="back-button"> Back </a>
+	<div class="top-strip left-align">
+		<a href="pokemon.html" class="gray-button"> Back </a>
 	</div>
 	<h2 class="black-bg"> Most Used </h2>
 	<div class="container">
@@ -138,7 +138,7 @@
 				<img src="http://www.smogon.com/dex/media/sprites/xy/incineroar.gif">
 				<br>
 				<span class="red-text gray-button"> Incineroar 
-				<img width="25px" src="pokemon/firium-z.png"> </span>
+				<img width="25px" src="gaming/firium-z.png"> </span>
 			</div>
 		</div>
 	</div>
@@ -187,7 +187,7 @@
 				<img src="http://www.smogon.com/dex/media/sprites/xy/groudon-primal.gif">
 				<br>
 				<span class="red-text gray-button"> Groudon
-				<img width="15px" src="pokemon/red-orb.jpg">
+				<img width="15px" src="gaming/red-orb.jpg">
 				</span>
 			</div>
 		</div>
