--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -7,8 +7,8 @@
 	<!-- meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no" -->
 </head>
 <body>
-	<div class="top-strip">
-		<a href="gaming.html" class="back-button"> Back </a>
+	<div class="top-strip left-align">
+		<a href="gaming.html" class="gray-button"> Back </a>
 	</div>
 	<div class="centering">
 		<img class="heading" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/International_Pok%C3%A9mon_logo.svg/2000px-International_Pok%C3%A9mon_logo.svg.png" alt="Pokemon Logo">
@@ -122,8 +122,11 @@
 			
 			<a href="poke-search.html" class="white-menu light-gray-text"> Pok&eacute;mon Finder </a>
 			<br>
-			<a href="poke-teams.html" class="white-menu light-gray-text"> View More Teams </a>
+			<a href="teambuilder.html" class="white-menu light-gray-text"> Teambuilder </a>
 			<br>
+			<a href="poke-teams.html" class="white-menu light-gray-text"> View My Teams </a>
+			<br>
+
 			<h2 class="white-text"> The Main Team </h2>
 			<div>
 				<img src="http://www.smogon.com/dex/media/sprites/xy/galvantula.gif">
@@ -204,7 +207,8 @@
 			<div>
 				<img src="http://www.smogon.com/dex/media/sprites/xy/incineroar.gif">
 				<br>
-				<span class="red-text gray-button"> Incineroar </span>
+				<span class="red-text gray-button"> Incineroar 
+				<img width="25px" src="gaming/firium-z.png"> </span>
 			</div>
 		</div>	
 	</div>
