--- a/sub-cites/rocket-league.html
+++ b/sub-cites/rocket-league.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" href="styles-rocket.css">
 </head>
 <body>
-	<div class="top-strip">
-		<a href="gaming.html" class="back-button"> Back </a>
+	<div class="top-strip left-align">
+		<a href="gaming.html" class="gray-button"> Back </a>
 	</div>
 	<div class="centering">
 		<img class="heading" src="https://cdn.freebiesupply.com/logos/large/2x/rocket-league-logo-png-transparent.png" alt="Rocket League Logo">
