--- a/sub-cites/running.html
+++ b/sub-cites/running.html
@@ -5,8 +5,8 @@
 	<link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-	<div class="top-strip">
-		<a href="../index.html" class="back-button"> Back </a>
+	<div class="top-strip left-align">
+		<a href="../index.html" class="gray-button"> Back </a>
 	</div>
 </body>
 </html>
