Fixed sizability on Teambuilder page

--- a/sub-cites/art/minecraftmk7.html
+++ b/sub-cites/art/minecraftmk7.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
 <body>
-	<div class="top-strip">
-		<a href="../art.html" class="back-button"> Back </a>
+	<div class="top-strip left-align">
+		<a href="../art.html" class="gray-button"> Back </a>
 	</div>
 	<h1>  Minecraft - Mario Kart 7 Rainbow Road <h1>
 	<p class="center-whole">
