Pulled PokeFinder page from CS315 assignment on ice.truman.edu temporarily

--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -120,11 +120,52 @@
 		
 		<div class="white-outline centering right-side-poke">
 			
-			<a href="poke-search.html" class="white-menu light-gray-text"> Pok&eacute;mon Finder </a>
+			<a href="http://ice.truman.edu/~bcr7812/project/poke-search315.php" class="white-menu light-gray-text"> Pok&eacute;mon Finder </a>
 			<br>
 			<a href="teambuilder.html" class="white-menu light-gray-text"> Teambuilder </a>
 			<br>
 			<a href="poke-teams.html" class="white-menu light-gray-text"> View My Teams </a>
+			<br>
+			
+			<h2 class="white-text"> Spooky Team 2018 </h2>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/crobat.gif">
+				<br>
+				<span class="purple-text gray-button"> Crobat </span>
+			</div>
+			<br>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/zoroark.gif">
+				<br>
+				<span class="purple-text gray-button"> Zoroark </span>
+			</div>
+			<br>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/chandelure.gif">
+				<br>
+				<span class="purple-text gray-button"> Chandelure </span>
+			</div>
+			<br>
+			<br>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/ariados.gif">
+				<br>
+				<span class="purple-text gray-button"> Ariados </span>
+			</div>
+			<br>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/gourgeist.gif">
+				<br>
+				<span class="purple-text gray-button"> Gourgeist </span>
+			</div>
+			<br>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/banette-mega.gif">
+				<br>
+				<span class="purple-text gray-button"> Banette 
+				<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png"> </span>
+			</div>
+			
 			<br>
 
 			<h2 class="white-text"> The Main Team </h2>
@@ -165,50 +206,6 @@
 				<span class="white-text gray-button"> Medicham
 				<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png">
 				</span>
-			</div>
-			
-			<br>
-			
-			<h2 class="white-text"> Recent Team - Pok&eacute;mon Sun </h2>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/toucannon.gif">
-				<br>
-				<span class="almost-black-text gray-button"> Toucannon </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/lycanroc.gif">
-				<br>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/lycanroc-dusk.gif">
-				<br>
-				<span class="tan-text gray-button"> Lycanroc </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/ninetales-alola.gif">
-				<br>
-				<span class="white-text gray-button"> Ninetales </span>	
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/wishiwashi.gif">
-				<br>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/wishiwashi-school.gif">
-				<br>
-				<span class="light-blue-text gray-button"> Wishiwashi </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/palossand.gif">
-				<br>
-				<span class="sand-text gray-button"> Palossand </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/incineroar.gif">
-				<br>
-				<span class="red-text gray-button"> Incineroar 
-				<img width="25px" src="gaming/firium-z.png"> </span>
 			</div>
 		</div>	
 	</div>
